--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,19 @@
+body {
+  background: linear-gradient(to bottom right, lightgrey, white, lightgrey)
+              fixed;
+}
 div {
   text-align: center;
 }
-
+h1 {
+  width: 90%;
+  margin: 10px auto;
+  text-align: center;
+  font-family: Helvetica Neue;
+  font-size: 40px;
+  font-weight: bold;
+  letter-spacing: -1px;
+}
 #cardDiv {
   text-align: center;
   margin: 0 auto;
@@ -15,6 +27,7 @@ td {
   width: 150px;
   height: 25px;
   text-align: right;
+  font-family: monospace;
 }
 .faceCard {
   display: none;
